--- a/.github/actions/ansiblecollectioninfo/action.yml
+++ b/.github/actions/ansiblecollectioninfo/action.yml
@@ -46,17 +46,15 @@ runs:
         FILENAME: ${{ inputs.filename }}
         PYTHON: python${{ inputs.python_version }}
       run: |
-
         if test -n "$FILENAME"; then
             # local mode
             read namespace name rest < <(echo "$FILENAME" | sed 's/-/ /g')
         else
-
-            curl -s "https://$SERVER/$CI_REPO/$CI_REF/galaxy.yml" | $PYTHON
             $PYTHON -c "
         import sys, yaml, json
         y=yaml.safe_load(sys.stdin.read())
-        print(json.dumps(y))") |\
+        print(json.dumps(y))" < \
+            <(curl -s "https://$SERVER/$CI_REPO/$CI_REF/galaxy.yml")|\
             jq -r '.namespace + " " + .name' >/tmp/ansiblecollectioninfo.txt
             read namespace name <(cat /tmp/ansiblecollectioninfo.txt)
         fi
