trying to debug molecule (#33)

--- a/.github/workflows/reusable-molecule.yml
+++ b/.github/workflows/reusable-molecule.yml
@@ -129,7 +129,25 @@ jobs:
           if test -n "$CI_TARGET"; then
               molecule -e "$ENV_FILE" -c molecule/molecule.yml test -s "$SCENARIO"
           else
-              molecule -c molecule/molecule.yml test -s "$SCENARIO"
+              molecule -c molecule/molecule.yml test -s "$SCENARIO" --destroy never
           fi
 
+      - name: Debug
+        if: failure()
+        working-directory: ${{ env.working-directory }}
+        env:
+          CI_TARGET: ${{ inputs.target }}
+          CI_HOSTNAME: ${{ inputs.hostname }}
+          ENV_FILE: molecule/env-${{ inputs.target }}.yml
+        run: |
+          podman network ls
+          while read n; do
+            podman network inspect "$n"
+          done < <(podman network ls -q)
+          if test -n "$CI_TARGET"; then
+              source "$ENV_FILE"
+          fi
+          test -n "$CI_HOSTNAME"
+          podman inspect "$CI_HOSTNAME"
+          ansible -c podman -i "$CI_HOSTNAME", all -m setup
 ...
