--- a/.github/workflows/reusable-sanity.yml
+++ b/.github/workflows/reusable-sanity.yml
@@ -36,7 +36,9 @@ jobs:
 
       - name: Check for @dev references to reusable workflows
         # pull_request against main or branch is main
-        if: github.base_ref == 'main' || github.ref_name == 'main'
+        if: |
+          github.base_ref == 'main' || github.ref_name == 'main' ||\
+          github.base_ref == 'master' || github.ref_name == 'master'
         run: |
           ! grep -v grep .github/workflows/*.yml | grep -E "workflows/.*yml@[^m][^a]?[^i]?[^n]?"
 
