--- a/.github/workflows/reusable-sanity.yml
+++ b/.github/workflows/reusable-sanity.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Check default branch is called 'main'
         run: |
           default=$(git ls-remote --symref ${{ github.server_url }}/${{ github.repository }} HEAD | awk -F'[/\t]' 'NR == 1 {print $3}')
+          echo default branch is "$default"
           test "$default" = "main"
 
       - name: Check for @dev references to reusable workflows
