--- a/.github/workflows/reusable-sanity.yml
+++ b/.github/workflows/reusable-sanity.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           default=$(git ls-remote --symref ${{ github.server_url }}/${{ github.repository }} HEAD | awk -F'[/\t]' 'NR == 1 {print $3}')
           echo default branch is "$default"
-          test "$default" = "main"
+          test "$default" = "main" -o "$default" = "dev"
 
   reusables:
 
