--- a/.github/workflows/reusable-sanity.yml
+++ b/.github/workflows/reusable-sanity.yml
@@ -21,14 +21,16 @@ jobs:
     name: Sanity Checks
     runs-on: ubuntu-latest
     steps:
-      - name: Check default branch is called 'main'
+      - name: Default branch
+        env:
+          REPO: ${{ github.server_url }}/${{ github.repository }}
         run: |
-          default=$(git ls-remote --symref ${{ github.server_url }}/${{ github.repository }} HEAD | awk -F'[/\t]' 'NR == 1 {print $3}')
+          default=$(git ls-remote --symref "$REPO" HEAD | awk -F'[/\t]' 'NR == 1 {print $3}')
           echo default branch is "$default"
-          test "$default" = "main" -o "$default" = "dev"
+          test ! "$default" = "master"
 
   reusables:
-    name: Check for references @dev in main branch
+    name: Reusables @dev
     runs-on: ubuntu-latest
     env:
       BASE_BRANCH: ${{ github.base_ref }}
@@ -38,8 +40,8 @@ jobs:
 
       - name: Debug
         run: |
-          echo "$BASE_BRANCH"
-          echo "$HEAD_BRANCH"
+          echo base branch "$BASE_BRANCH"
+          echo head branch "$HEAD_BRANCH"
 
       - name: Checkout ourself
         uses: actions/checkout@v4
