--- a/.github/workflows/reusable-ansibledocs.yml
+++ b/.github/workflows/reusable-ansibledocs.yml
@@ -36,7 +36,7 @@ jobs:
               # CI run on mafalb/workflows
               # mangle repo and ref
               repo="mafalb/ansible-test-collections"
-              if  "${{ github.ref_name }}" = "main"; then
+              if  "${{ github.ref_name }}" = "prod"; then
                   ref="main"  # we know that main is the master branch of mafalb/ansible-test-collections
               else
                   ref="dev"
