--- a/.github/workflows/reusable-sanity.yml
+++ b/.github/workflows/reusable-sanity.yml
@@ -17,10 +17,12 @@ on:  # yamllint disable-line rule:truthy
 
 jobs:
 
-  defaultbranch:
+  sanity:
     name: Sanity Checks
     runs-on: ubuntu-latest
+
     steps:
+
       - name: Default branch
         env:
           REPO: ${{ github.server_url }}/${{ github.repository }}
@@ -28,6 +30,12 @@ jobs:
           default=$(git ls-remote --symref "$REPO" HEAD | awk -F'[/\t]' 'NR == 1 {print $3}')
           echo default branch is "$default"
           test ! "$default" = "master"
+
+      - name: Checkout ourself
+        uses: actions/checkout@v4
+
+      - name: Check CODEOWNERS
+        run: test -f .github/CODEOWNERS
 
   reusables:
     name: Reusables @dev
@@ -47,13 +55,11 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Check for @dev references to reusable workflows
-        # pull_request against main or branch is main
+        # pull_request against prod or branch is prod
         if: |
           github.base_ref == 'main' || github.ref_name == 'main' ||
+          github.base_ref == 'prod' || github.ref_name == 'prod' ||
           github.base_ref == 'master' || github.ref_name == 'master'
         run: |
-          ! grep -v grep .github/workflows/*.yml | grep -E "workflows/.*yml@[^m][^a]?[^i]?[^n]?"
-
-      - name: Check that CODEOWNERS file is present
-        run: test -f .github/CODEOWNERS
+          ! grep -v grep .github/workflows/*.yml | grep -E "workflows/.*yml@[^p][^r]?[^o]?[^d]?"
 ...
