--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,7 +26,7 @@ on:  # yamllint disable-line rule:truthy
         type: choice
         options:
           - dev
-          - main
+          - prod
 
 jobs:
 
