set name for molecule job

--- a/.github/workflows/reusable-molecule.yml
+++ b/.github/workflows/reusable-molecule.yml
@@ -40,7 +40,7 @@ on:  # yamllint disable-line rule:truthy
 jobs:
 
   molecule:
-
+    name: molecule ${{ input.target }}
     runs-on: ubuntu-20.04
 
     env:
