--- a/.github/workflows/ci-ci.yml
+++ b/.github/workflows/ci-ci.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Get Info about mafalb.ansible
         uses: ./.github/actions/ansiblecollectioninfo
         with:
-          targeted_branch: dev
+          targeted_branch: dev  # FIX
           repository: mafalb/ansible-collection-ansible
       - name: Assertions
         run: |
@@ -123,6 +123,29 @@ jobs:
       hostname: ci-system
       target: ubuntu22
 
+  molecule_multiple_scenarios:
+    needs:
+      - selectbranch
+      - createansiblecollection
+    uses: ./.github/workflows/reusable-molecule.yml
+    with:
+      targeted_branch: ${{ needs.selectbranch.outputs.ref }}
+      filename: local-ci-0.1.0.tar.gz
+      hostname: ci-system
+      target: ubuntu22
+      scenarios: "default, default"  # cheating!
+
+  scenariocount:
+    needs: molecule_multiple_scenarios
+    runs-on: ubuntu-latest
+    env:
+      LOOPCOUNT: ${{ needs.molecule_multiple_scenarios.outputs.scenariocount }}
+    steps:
+      - name: Has looped two times
+        run:
+          # We tested two scenarios in the job before
+          test "$LOOPCOUNT" = 2
+
   allsuccess:
     if: success() || failure()
     uses: ./.github/workflows/reusable-allsuccess.yml
@@ -136,4 +159,6 @@ jobs:
       - createansiblecollection
       - ansiblecollection
       - molecule
+      - molecule_multiple_scenarios
+      - scenariocount
 ...
