--- a/.github/workflows/reusable-ansibledocs.yml
+++ b/.github/workflows/reusable-ansibledocs.yml
@@ -15,6 +15,10 @@ on:  # yamllint disable-line rule:truthy
       ref:
         type: string
         default: ${{ github.sha }}
+      # necessary?
+      ansible_lint_specifier:
+        type: string
+
 
 jobs:
 
@@ -53,7 +57,6 @@ jobs:
   ansible-test:
     runs-on: ubuntu-22.04
     needs: prepare
-    environment: ${{ needs.prepare.outputs.env_name }}
     env:
       PY_COLORS: 1
       ANSIBLE_FORCE_COLOR: 1
@@ -143,7 +146,7 @@ jobs:
         run: |
           ansible-playbook -D playbooks/install-ansible.yml \
             -e '{"virtualenv_packages":["_ansible==${{ matrix.ansible_version }}",
-                                        "ansible-lint${{ matrix.ansible_lint_specifier }}",
+                                        "ansible-lint${{ inputs.ansible_lint_specifier }}",
                                         "_ansible_test", "flake8", "antsibull-docs", "rstcheck-core"]}'\
             -e virtualenv_python=python${{ matrix.python_version }} -t all,debug
         env:
