--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -20,6 +20,9 @@ on:  # yamllint disable-line rule:truthy
       mock:
         type: boolean
         default: false
+      run_integration_as_root:
+        type: boolean
+        default: false
 
 jobs:
 
@@ -219,7 +222,11 @@ jobs:
         working-directory: ${{ env.working-directory }}
         run: |
           source "$HOME/.virtualenvs/ansible/bin/activate"
-          ansible-test integration --requirements --python ${{ matrix.python_version }}
+          if ${{ run_integration_as_root }}
+              sudo ansible-test integration --requirements --python ${{ matrix.python_version }}
+          else
+              ansible-test integration --requirements --python ${{ matrix.python_version }}
+          fi
 
       - name: mock a role to make documentation test pass
         if: matrix.ansible_version != 2.12 and ${{ inputs.mock }} == true
