--- a/.github/workflows/ci-ci.yml
+++ b/.github/workflows/ci-ci.yml
@@ -118,6 +118,7 @@ jobs:
       - createansiblecollection
     uses: ./.github/workflows/reusable-molecule.yml
     with:
+      name: Molecule citest
       targeted_branch: ${{ needs.selectbranch.outputs.ref }}
       filename: local-ci-0.1.0.tar.gz
       hostname: ci-system
@@ -129,6 +130,7 @@ jobs:
       - createansiblecollection
     uses: ./.github/workflows/reusable-molecule.yml
     with:
+      name: Molecule multiple scenarios
       targeted_branch: ${{ needs.selectbranch.outputs.ref }}
       filename: local-ci-0.1.0.tar.gz
       hostname: ci-system
